# cv-dog-gait

./: .gitignore  README.md  app.py  pyproject.toml
src/dog_gait/: __init__.py
src/dog_gait/analysis/: __init__.py  angles.py  overlay.py
src/dog_gait/data/: __init__.py  annotations.py  dataset.py  finetune.py  frames.py
src/dog_gait/pose/: __init__.py  checkpoints.py  decoder.py  detector.py  detector_model.py  estimator.py  heuristic.py  model.py  preprocess.py  schema.py
tests/: test_angles.py  test_annotations.py  test_checkpoints.py  test_dataset.py  test_decoder.py  test_estimator_progress.py  test_heuristic.py  test_model.py  test_overlay.py  test_preprocess.py  test_schema.py
