[project]
name = "cv-dog-gait"
version = "0.1.0"
description = "Streamlit dog gait analysis platform with a lightweight pose estimation stack."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "streamlit>=1.32",
    "torch>=2.1",
    "torchvision>=0.16",
    "plotly>=5.18",
    "huggingface-hub>=0.36",
    "timm>=1.0.27",
    "streamlit-image-coordinates>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
